Remove extra double qoutes
The args are quoted by the runner itself

--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,6 @@ runs:
   image: docker://antaljanosbenjamin/latex-extra:latest
   entrypoint: latexmk
   args:
-    - '-output-directory="/github/workspace/${{ inputs.working-directory }}"'
+    - -output-directory=/github/workspace/${{ inputs.working-directory }}
     - ${{ inputs.args }}
     - /github/workspace/${{ inputs.file }}
