Update latexmk parameters to make the action work
-cd is necessary for bib files
switching the order of args and input file are necessary because otherwise latexmk cannot handle it

--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,7 @@ runs:
   image: docker://antaljanosbenjamin/latex-extra:latest
   entrypoint: latexmk
   args:
+    - -cd # change to directory of source file when processing it
     - -output-directory=/github/workspace/${{ inputs.working-directory }}
-    - ${{ inputs.args }}
     - /github/workspace/${{ inputs.file }}
+    - ${{ inputs.args }}
