--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,6 @@ runs:
   entrypoint: latexmk
   args:
     - -cd # change to directory of source file when processing it
-    - -output-directory=/github/workspace/${{ inputs.working-directory }}
+    - -output-directory=/github/workspace/${{ inputs.output-directory }}
     - /github/workspace/${{ inputs.file }}
     - ${{ inputs.args }}
