Change action name due marketplace conflict

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Compile LaTeX'
+name: 'Compile LaTeX via latexmk'
 description: 'Calls latexmk to compile a LaTeX document'
 author: antaljanosbenjamin
 branding:
